--- a/.github/workflows/hell-world.yaml
+++ b/.github/workflows/hell-world.yaml
@@ -23,5 +23,5 @@ jobs:
         run: echo "Goodbye World from git actions project"
         shell: bash
       - name: Thanks to Teacher
-        run: echo "Thank you Mr. Parkash Sarangani from Bilawal Kumbhar"
+        run: echo "Thank you for teaching me about vs code"
 
